re PR rtl-optimization/29128 (ICE: in move_block_after_check, at haifa-sched.c:4337)

2006-10-06  Maxim Kuvyrkov  <mkuvyrkov@ispras.ru>

	PR rtl-optimization/29128
	* sched-int.h (IS_SPECULATION_BRANCHY_CHECK_P): New macro.
	* sched-ebb.c (advance_target_bb): Use it to fix condition to
	allow interblock movement of speculation checks.

	* gcc.c-torture/compile/pr29128.c: New test.

From-SVN: r117515